--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,4 +10,5 @@ jobs:
     runs-on: self-hosted
     
   steps:
-    - uses: actions/checkout@v1
+    - name: testrun
+      run: PowerShell -Command "dir env:"
