--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,4 @@
 # This is a basic workflow to help you get started with Actions
-
 name: CI
 
 on: 
@@ -9,6 +8,6 @@ jobs:
   build:
     runs-on: self-hosted
     
-  steps:
-    - name: testrun
+    steps:
+      name: testrun
       run: PowerShell -Command "dir env:"
