--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,5 +9,5 @@ jobs:
     runs-on: self-hosted
     
     steps:
-      name: testrun
-      run: PowerShell -Command "dir env:"
+      - name: testrun
+        run: dir env:
