--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,5 +10,7 @@ jobs:
     steps:
       - name: testrun
         run: powershell "dir env:"
-      - name: compile
+      - name: restore
         run: "dotnet tool restore"
+      - name: compile
+        run: .\pipeline_scripts\CompileAll.cmd Base -ci GITHUB_WORKSPACE
