--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,6 +8,7 @@ jobs:
   testenv:
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
       - name: testrun
         run: powershell "dir env:"
       - name: restore
