--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,7 @@ jobs:
       - name: restore
         run: "dotnet tool restore"
       - name: compile
-        # run:  "${{ format('{0}/pipeline_scripts/CompileAll.cmd', github.workspace) }}"
+        run: .\pipeline_scripts\CompileAll.cmd Base -ci GITHUB_WORKSPACE
+      - name: script
         run: python print.py
           
