--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
       - name: restore
         run: "dotnet tool restore"
       - name: compile
-        run: ./pipeline_scripts/CompileAll.cmd Base -ci $GITHUB_WORKSPACE
+        run: ./pipeline_scripts/CompileAll.cmd
       - name: script
         run: python print.py
           
